[package]
name = "ipdb-updater"
version = "0.2.0"
edition = "2021"

[profile.release]
incremental = true
opt-level = 3
strip = "symbols"
panic = "abort"
lto = "fat"

[profile.release.package.frankenstein]
opt-level = "s"

[dependencies]
anyhow = "1.0"

# Telegram API
frankenstein = { version = "0.29", default-features = false, features = [
  "async-http-client",
] }

clap = { version = "4.0", features = ["derive", "cargo", "wrap_help", "env"] }
clap-verbosity-flag = "2.0"

log = "0.4"

log4rs = { version = "1.1", default-features = false, features = [
  "all_components",
  "pattern_encoder",
] }

chrono = "0.4"

futures = { version = "0.3" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.2"

xz2 = "0.1"
tar = "0.4"

tokio-stream = "0.1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls-native-roots", "json", "brotli", "stream", "gzip", "deflate", "socks", "multipart"]

[dependencies.tokio]
version = "1.20"
default-features = false
features = ["rt-multi-thread", "macros"]
